2013-03-15  Nick Alcock  <nick.alcock@oracle.com>

	* libproc/Psymtab.c (map_iter): Allow a null string.
	(debug_dump_symtab): New, dump a symbol table.
	(debug_dump_status): New, dump the status of a process.
	(Pupdate_syms): Add a missing update_lmids() call.
	(sym_by_addr): Quash warnings and a potential use of
	uninitialized data.
	(sym_by_name): Note if a null symbol is found.
	(Pbuild_file_symtab): Fix faulty recursion if a breakpoint handler
	looks up a name.

	(Pxlookup_by_name): Rename to...
	(Pxlookup_by_name_internal): ... this, adding fixup_load_addr
	parameter.
	(Pxlookup_by_name): New wrapper.
	(Pbuild_file_symtab): Call it to compute the file_dyn_base of
	ld.so.

	* libproc/Pcontrol.h (ps_prochandle_t.ptrace_halted): New, set
	when the process was halted via Ptrace() rather than a breakpoint.
	* libproc/Pcontrol.c (Pcreate): Set it.
	(Ptrace): Likewise.
	(Puntrace): Likewise.
	(Punbkpt): Use it to determine whether to resume on breakpoint
	removal.

	* libproc/Pcontrol.h (ps_prochandle_t.bkpt_consume): New
	(ps_prochandle_t.singlestepped): Remove.
	* libproc/Pcontrol.c (bkpt_handle_singlestep): Rename to...
	(bkpt_handle_post_singlestep): ... this.  Remove 'singlestepped'.
	(Pbkpt_continue_internal): Pass in the singlestepping state.
	Adjust for renaming.
	(bkpt_ip): New, split from...
	(Pwait): ... here, with added optional ignoring of -ESRCH.  Reset
	new state variables on exec().  Do not call breakpoint handlers
	when bkpt_consume is set.
	(Punbkpt): Remove 'singlestepped'.
	(bkpt_flush): Likewise.
	(bkpt_handle_start): Likewise. Adjust for renaming: always ask
	Pbkpt_continue_internal() to singlestep.
	(bkpt_handle): Adjust for renaming.
	(Pbkpt_continue): Determine need for singlestep by inspection of
	IP address.  Consume pending SIGTRAPs if singlestepping is not
	needed.  Simply consume process state changes (and fire handlers)
	if the process is still running.

	* libproc/Pcontrol.h (ps_prochandle_t.pending_stops): New, counts